--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -10,34 +10,36 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyboardTextView" customModule="DoneDoneMemo" customModuleProvider="target">
-            <connections>
-                <outlet property="textField" destination="XF8-7f-NkM" id="5xg-lu-bYh"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KeyboardTextView" customModule="DonePad" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XF8-7f-NkM">
-                    <rect key="frame" x="4" y="6" width="312" height="38"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" spellCheckingType="no" returnKeyType="done"/>
-                </textField>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-w9-BIA">
+                    <rect key="frame" x="8" y="8" width="304" height="34"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="tby-k0-aIH"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="XF8-7f-NkM" secondAttribute="bottom" constant="6" identifier="a" id="37R-IM-ca3"/>
-                <constraint firstItem="XF8-7f-NkM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" identifier="b" id="Bgf-nv-93f"/>
-                <constraint firstItem="XF8-7f-NkM" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="6" identifier="c" id="XCv-Y6-C66"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="XF8-7f-NkM" secondAttribute="trailing" constant="4" id="dQa-zN-iOY"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" identifier="111" id="3sm-tJ-s8i"/>
+                <constraint firstItem="j7g-w9-BIA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" identifier="333" id="AZT-0r-Owc"/>
+                <constraint firstItem="j7g-w9-BIA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" identifier="444" id="aJY-tk-fkK"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="8" identifier="222" id="fgq-Jb-PO3"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <connections>
+                <outlet property="textView" destination="j7g-w9-BIA" id="ai0-Nh-wwp"/>
+            </connections>
             <point key="canvasLocation" x="26.5" y="365"/>
         </view>
     </objects>
