--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-w9-BIA">
-                    <rect key="frame" x="8" y="8" width="304" height="34"/>
+                    <rect key="frame" x="52" y="8" width="260" height="34"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="tby-k0-aIH"/>
@@ -25,13 +25,28 @@
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                 </textView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GBf-X5-7fv">
+                    <rect key="frame" x="0.0" y="0.0" width="44" height="50"/>
+                    <color key="backgroundColor" red="0.94117647059999998" green="0.47058823529999999" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="44" id="Bg8-48-tUe"/>
+                    </constraints>
+                    <state key="normal" title="B"/>
+                    <connections>
+                        <action selector="tapTimerButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="ZHE-pc-4i5"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" identifier="111" id="3sm-tJ-s8i"/>
-                <constraint firstItem="j7g-w9-BIA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" identifier="333" id="AZT-0r-Owc"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="H8O-9e-tsz"/>
+                <constraint firstItem="j7g-w9-BIA" firstAttribute="leading" secondItem="GBf-X5-7fv" secondAttribute="trailing" constant="8" id="H9u-6f-o3Q"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ZQH-k0-ytf"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" identifier="444" id="aJY-tk-fkK"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="8" identifier="222" id="fgq-Jb-PO3"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jFy-ih-Wba"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="q1g-a5-IhR"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -39,8 +54,9 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="textView" destination="j7g-w9-BIA" id="ai0-Nh-wwp"/>
+                <outlet property="timerButton" destination="GBf-X5-7fv" id="Q3M-ao-GKU"/>
             </connections>
-            <point key="canvasLocation" x="26.5" y="365"/>
+            <point key="canvasLocation" x="26" y="365"/>
         </view>
     </objects>
 </document>
