--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -27,11 +27,11 @@
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GBf-X5-7fv">
                     <rect key="frame" x="0.0" y="0.0" width="44" height="50"/>
-                    <color key="backgroundColor" red="0.94117647059999998" green="0.47058823529999999" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="44" id="Bg8-48-tUe"/>
                     </constraints>
-                    <state key="normal" title="B"/>
+                    <state key="normal" image="ic_alarm"/>
+                    <state key="highlighted" image="ic_alarm"/>
                     <connections>
                         <action selector="tapTimerButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="ZHE-pc-4i5"/>
                     </connections>
@@ -59,4 +59,7 @@
             <point key="canvasLocation" x="26" y="365"/>
         </view>
     </objects>
+    <resources>
+        <image name="ic_alarm" width="24" height="24"/>
+    </resources>
 </document>
