--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-w9-BIA">
-                    <rect key="frame" x="52" y="8" width="216" height="46"/>
+                    <rect key="frame" x="60" y="8" width="200" height="46"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="tby-k0-aIH"/>
@@ -26,10 +26,10 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GBf-X5-7fv">
-                    <rect key="frame" x="8" y="8" width="36" height="36"/>
+                    <rect key="frame" x="8" y="0.0" width="44" height="44"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="36" id="chH-7l-iAx"/>
-                        <constraint firstAttribute="width" constant="36" id="nvH-PT-xCN"/>
+                        <constraint firstAttribute="height" constant="44" id="chH-7l-iAx"/>
+                        <constraint firstAttribute="width" constant="44" id="nvH-PT-xCN"/>
                     </constraints>
                     <state key="normal" image="ic_alarm"/>
                     <state key="highlighted" image="ic_alarm"/>
@@ -38,26 +38,23 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHj-zW-NLt">
-                    <rect key="frame" x="276" y="8" width="36" height="36"/>
-                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="268" y="0.0" width="44" height="44"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="36" id="4Ui-bq-r0q"/>
-                        <constraint firstAttribute="width" constant="36" id="cY8-zK-Sez"/>
+                        <constraint firstAttribute="height" constant="44" id="4Ui-bq-r0q"/>
+                        <constraint firstAttribute="width" constant="44" id="cY8-zK-Sez"/>
                     </constraints>
-                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" image="ic_arrow_up"/>
+                    <state key="normal" image="ic_add_circle"/>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="eHj-zW-NLt" firstAttribute="leading" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" id="EdS-I6-dUT"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="leading" secondItem="GBf-X5-7fv" secondAttribute="trailing" constant="8" id="H9u-6f-o3Q"/>
-                <constraint firstItem="eHj-zW-NLt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="So0-XJ-Dbm"/>
-                <constraint firstItem="GBf-X5-7fv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="ZQH-k0-ytf"/>
+                <constraint firstItem="eHj-zW-NLt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="So0-XJ-Dbm"/>
+                <constraint firstItem="GBf-X5-7fv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ZQH-k0-ytf"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" identifier="444" id="aJY-tk-fkK"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="8" identifier="222" id="fgq-Jb-PO3"/>
                 <constraint firstItem="eHj-zW-NLt" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-8" id="ggX-gG-QfX"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GBf-X5-7fv" secondAttribute="bottom" constant="8" id="iMJ-GC-Oz2"/>
                 <constraint firstItem="GBf-X5-7fv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="jFy-ih-Wba"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
@@ -73,7 +70,7 @@
         </view>
     </objects>
     <resources>
+        <image name="ic_add_circle" width="24" height="24"/>
         <image name="ic_alarm" width="24" height="24"/>
-        <image name="ic_arrow_up" width="24" height="24"/>
     </resources>
 </document>
