--- a/DonePad/View/View/TaskCell.xib
+++ b/DonePad/View/View/TaskCell.xib
@@ -13,22 +13,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="60" id="KGk-i7-Jjw" customClass="TaskCell" customModule="DoneDoneMemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="89" id="KGk-i7-Jjw" customClass="TaskCell" customModule="DonePad" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="88.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_checkbox" translatesAutoresizingMaskIntoConstraints="NO" id="Sya-SE-E1o">
-                        <rect key="frame" x="12" y="14" width="32" height="32"/>
+                        <rect key="frame" x="12" y="28.5" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="32" id="386-q3-dI7"/>
                             <constraint firstAttribute="height" constant="32" id="9px-38-aK7"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYd-49-X7G">
-                        <rect key="frame" x="52" y="19" width="244" height="22"/>
+                        <rect key="frame" x="52" y="19" width="244" height="29"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
@@ -38,22 +38,35 @@
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Avt-ZL-Zte">
+                        <rect key="frame" x="52" y="52" width="37.5" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="00j-OH-wun"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.29803921568627451" green="0.29803921568627451" blue="0.29803921568627451" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottomMargin" secondItem="Avt-ZL-Zte" secondAttribute="bottom" constant="8" id="2oE-GR-MZT"/>
                     <constraint firstItem="KYd-49-X7G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Mck-05-NDR"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="KYd-49-X7G" secondAttribute="bottom" constant="8" id="Ye0-ci-RTp"/>
+                    <constraint firstItem="Avt-ZL-Zte" firstAttribute="top" secondItem="KYd-49-X7G" secondAttribute="bottom" constant="4" id="ObY-w9-T3H"/>
                     <constraint firstItem="KYd-49-X7G" firstAttribute="leading" secondItem="Sya-SE-E1o" secondAttribute="trailing" constant="8" id="de9-0L-GKM"/>
                     <constraint firstItem="Sya-SE-E1o" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fGG-6t-YBb"/>
+                    <constraint firstItem="Avt-ZL-Zte" firstAttribute="leading" secondItem="KYd-49-X7G" secondAttribute="leading" id="k3A-Nq-Uv4"/>
                     <constraint firstAttribute="trailingMargin" secondItem="KYd-49-X7G" secondAttribute="trailing" constant="8" id="ngr-Uy-FLs"/>
                     <constraint firstItem="Sya-SE-E1o" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="plw-Ru-LJO"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="deadlineLabel" destination="Avt-ZL-Zte" id="6qs-uE-DRe"/>
+                <outlet property="deadlineLabelHeight" destination="00j-OH-wun" id="CW0-qP-eHw"/>
                 <outlet property="iconView" destination="Sya-SE-E1o" id="2Ea-Na-h1n"/>
                 <outlet property="titleLabel" destination="KYd-49-X7G" id="kte-SC-NTU"/>
             </connections>
-            <point key="canvasLocation" x="33" y="57"/>
+            <point key="canvasLocation" x="33" y="71.5"/>
         </tableViewCell>
     </objects>
     <resources>
