--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -13,14 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KeyboardTextView" customModule="DonePad" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7g-w9-BIA">
-                    <rect key="frame" x="60" y="8" width="200" height="46"/>
+                    <rect key="frame" x="60" y="8" width="200" height="50"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="tby-k0-aIH"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="28" id="tby-k0-aIH"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -48,32 +48,69 @@
                         <action selector="tapAddButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="izS-1B-mro"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" verticalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="vh1-a3-ct8" customClass="DeadlineView" customModule="DonePad" customModuleProvider="target">
+                    <rect key="frame" x="60" y="62" width="200" height="20"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAe-jH-oNN">
+                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ux4-V5-HPY">
+                            <rect key="frame" x="45.5" y="0.0" width="20" height="20"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="ct1-pg-hpm"/>
+                                <constraint firstAttribute="width" constant="20" id="iuf-ed-1wG"/>
+                            </constraints>
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" image="ic_clear"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="QAe-jH-oNN" secondAttribute="bottom" id="JhJ-SJ-J7M"/>
+                        <constraint firstAttribute="height" constant="20" id="PH1-p0-fxb"/>
+                        <constraint firstItem="Ux4-V5-HPY" firstAttribute="leading" secondItem="QAe-jH-oNN" secondAttribute="trailing" constant="8" id="TST-X4-QC0"/>
+                        <constraint firstAttribute="bottom" secondItem="Ux4-V5-HPY" secondAttribute="bottom" id="g4d-7C-Jtw"/>
+                        <constraint firstItem="QAe-jH-oNN" firstAttribute="top" secondItem="vh1-a3-ct8" secondAttribute="top" id="t7p-yj-E45"/>
+                        <constraint firstItem="Ux4-V5-HPY" firstAttribute="top" secondItem="vh1-a3-ct8" secondAttribute="top" id="vwS-hu-CxQ"/>
+                        <constraint firstItem="QAe-jH-oNN" firstAttribute="leading" secondItem="vh1-a3-ct8" secondAttribute="leading" id="xiK-qH-2IB"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="vh1-a3-ct8" firstAttribute="top" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="4" id="1WT-Lt-Abw"/>
+                <constraint firstItem="vh1-a3-ct8" firstAttribute="leading" secondItem="j7g-w9-BIA" secondAttribute="leading" id="ESt-Xj-fIp"/>
                 <constraint firstItem="eHj-zW-NLt" firstAttribute="leading" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" id="EdS-I6-dUT"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="leading" secondItem="GBf-X5-7fv" secondAttribute="trailing" constant="8" id="H9u-6f-o3Q"/>
                 <constraint firstItem="eHj-zW-NLt" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="So0-XJ-Dbm"/>
+                <constraint firstItem="vh1-a3-ct8" firstAttribute="trailing" secondItem="j7g-w9-BIA" secondAttribute="trailing" id="XbG-l8-jbs"/>
                 <constraint firstItem="GBf-X5-7fv" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ZQH-k0-ytf"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" identifier="444" id="aJY-tk-fkK"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="8" identifier="222" id="fgq-Jb-PO3"/>
                 <constraint firstItem="eHj-zW-NLt" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-8" id="ggX-gG-QfX"/>
                 <constraint firstItem="GBf-X5-7fv" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="jFy-ih-Wba"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="vh1-a3-ct8" secondAttribute="bottom" constant="8" id="o4E-aW-BaQ"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="deadlineClearButton" destination="Ux4-V5-HPY" id="ryL-hP-c6e"/>
+                <outlet property="deadlineLabel" destination="QAe-jH-oNN" id="dZe-Kp-ME3"/>
                 <outlet property="sendButton" destination="eHj-zW-NLt" id="zJa-DS-OBq"/>
                 <outlet property="textView" destination="j7g-w9-BIA" id="ai0-Nh-wwp"/>
                 <outlet property="timerButton" destination="GBf-X5-7fv" id="Q3M-ao-GKU"/>
             </connections>
-            <point key="canvasLocation" x="26" y="371"/>
+            <point key="canvasLocation" x="26" y="385"/>
         </view>
     </objects>
     <resources>
         <image name="ic_add_circle" width="24" height="24"/>
         <image name="ic_alarm" width="24" height="24"/>
+        <image name="ic_clear" width="24" height="24"/>
     </resources>
 </document>
